# rust-todo

./: .env  Cargo.toml  Rocket.toml  docket-compose.yaml
migrations/2021-11-06-170841_todo_table/: up.sql
src/: main.rs  schema.rs
