[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#  rm -rf ~/.cargo/.package-cache
[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "^1.4.8", features = ["postgres"] }
dotenv = "0.15.0"